## test sub-directory of the SimCRS project
include $(top_srcdir)/Makefile.common

MAINTAINERCLEANFILES = Makefile.in

##
# As every component can already be tested independently, for instance
# by a Continuous Integration (CI) framework such as Hudson/Jenkins,
# it is useless to retest them here. Uncomment the following line only
# when you have cannot test those components by another way.
#SUBDIRS = airsched rmol airinv avlcal simfqt simlfs simcrs
SUBDIRS = simcrs

EXTRA_DIST =

